--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name">About Me</string>
     <string name="name">Rajan Upadhyay</string>
     <string name="yello_star">Yello Star</string>
+    <string name="bio"> Hi my name is Rajan Upadhyay.
+        \n\n I love Chicken.
+        \n\n The kind that is alive and walks around the house or farm. or anywhere in the world.
+        \n\n Fun fact is that I have several aquariams and rivers.
+        \n\n I like eating fish too. Raw fish. Grilled fish. smoked Fish. Poached fish - not so much.
+        \n\n And sometimes I even go fishing.
+        \n\n And even less sometimes, I even catch something.
+        \n\n Once, I was camping in canada, and very hungry, I even caught a large salmon with my hands.
+        \n\n I\'ll be happy to teach you how to make your own aquariam.
+        \n\n You should ask someone else about fishing though.\n\n
+    </string>
 </resources>
